--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
 version: "3.9"
-
 services:
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: prs
+      POSTGRES_PASSWORD: prs
       POSTGRES_DB: prsdb
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U prs"]
       interval: 3s
       timeout: 3s
       retries: 5
@@ -24,7 +23,7 @@ services:
         condition: service_healthy
     volumes:
       - ./migrations:/migrations
-    command: ["-path=/migrations", "-database=postgres://postgres:postgres@db:5432/prsdb?sslmode=disable", "up"]
+    command: ["-path=/migrations", "-database=postgres://prs:prs@db:5432/prsdb?sslmode=disable", "up"]
     restart: "no"
 
   app:
@@ -35,8 +34,8 @@ services:
       db:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/prsdb?sslmode=disable
-      PORT: 8080
+      - DATABASE_URL=postgres://prs:prs@db:5432/prsdb?sslmode=disable
+      - PORT=8080
     ports:
       - "8080:8080"
     restart: "no"
